@@ -2,7 +2,8 @@ Download binaries here: http://market.android.com/details?pub=Andsen
 
 Next version
   Main screen now always in portrait
-  
+  First / last page in table viewer
+  Bug fixes
 
 Version 2.5:
   Bug fixes
